[tool.poetry]
name = "ex1"
version = "0.1.0"
description = ""
authors = ["jsouza <jsouza@student.42lisboa.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = ">=2.2,<2.3"
pandas = "^2"
requests = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"